--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,15 @@
 html,
 body {
-  padding: 0;
+  padding-top: 100px;
   margin: 0;
+}
+
+.button {
+  display: block;
+  padding: 10px;
+  font-size: 16px;
+  background: #9672f6;
+  color: white;
+  font-weight: 600;
+  border: 0;
 }
